--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,33 +1,33 @@
 <container>
-<row>
-<div class="card" style="width: 85%;">
-  <div class="card-header">
+  <row>
+    <div class="card">
+      <div class="card-header">
         <h3 class="card-title"><span>Login</span></h3>
-  </div>
-  <div class="card-body">
-<ul id="login-form" class="login-form">
-          <form class="login-form">
+      </div>
+      <div class="card-body">
+        <form class="login-form">
+          <ul id="login-form" class="login-form">
             <li>
               <label for="username-login">Username:</label><br>
               <input type="text" id="username-login" />
             </li>
             <li>
               <label for="password-login">Password:</label><br>
-              <input type="password" id="password-login" />
+              <input type="password" id="password-login" /><br><br>
             </li>
             <li>
-              <button class="login" type="submit">Login</button>
+              <div class="button">
+                <button class="login-btn" type="submit">Login!</button><br><br>
+              </div>
             </li>
             <li>
               <a href="/register">Signup instead</button>
             </li>
-          </form>
-        </ul>
+          </ul>
+        </form>
+      </div>
+    </div>
+  </row>
+</container>
 
-
-    <a href="#" class="login">Submit</a>
-  </div>
-</div>
-</row>
-  </container>
 <script src="/javascript/login.js"></script>
