--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -1,4 +1,4 @@
-  <section class="comment priya-hero-form">
+  <section class="ssave">
     <div class="meta">
       {{user.username}} on {{format_date createdAt}}
     </div>
