display posts on homepage

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -22,6 +22,7 @@
                             <li>
                                 <div class="button">
                                     <button class="post-btn" type="submit"> + New Post</button><br><br>
+                                    <a class="nav-link login" href="/create-post">Create Post</a>
                                 </div>
                             </li>
                             <li>
