--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,2 +1,21 @@
-<p style="color: black;">HOMEPAGE IS LOADING CORRECTLY!</p>
-<p style="color: black;">loggedIn: {{loggedIn}}</p>
+{{#each posts}}
+    <article class="blog-post">
+  <container>
+    <row>
+      <div class="card">
+        <div class="card-header">
+          <div class="title"><h2>{{title}}</h2>
+            by {{user.username}} on {{format_date createdAt}}
+          </div>
+            <div class="card-body">
+              <div class="meta">
+                {{content_txt}} 
+                {{comments.length}} {{format_plural "comment" comments.length}}
+              </div>
+            </div>
+        </div>
+      </div>
+    </row>
+  </container>
+</article>
+{{/each}}
