--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,6 +1,6 @@
 {{> post-info post}}
 <div>
-<form class="comment-form priya-hero-form">
+<form class="comment-form">
   <div>
 
     <textarea required minlength="3" name="comment-body" id="comment_body"></textarea>
