create and display comments

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -21,8 +21,7 @@
                             </li>
                             <li>
                                 <div class="button">
-                                    <button class="post-btn" type="submit"> + New Post</button><br><br>
-                                    <a class="nav-link login" href="/create-post">Create Post</a>
+                                    <button class="post-btn" type="submit"><a class="nav-link login" href="/create-post"> + New Post</a></button><br><br>
                                 </div>
                             </li>
                             <li>
