--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,6 +1,6 @@
-{{> post-info post}}
+{{> single-post-part singlePost}}
 <div>
-<form class="comment-form">
+<form class="comment-form priya-hero-form">
   <div>
 
     <textarea required minlength="3" name="comment-body" id="comment_body"></textarea>
@@ -8,12 +8,12 @@
   </div>
 
   <div>
-    <button class="hero-form" type="submit">add comment</button>
+    <button class="hero-form" id="create-comment-btn">add comment</button>
   </div>
 </form>
 
 <div class="comments">
-    {{#each post.comments as |comments|}}
+    {{#each postComments as |comments|}}
 {{> comments comments}}
     {{/each}}
 </div>
