--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -4,34 +4,27 @@
             <div class="card-header">
                 <h3 class="card-title">{{form_title}}</h3><br>
             </div>
-                <div class="card-body">
-                    <form action="/api/dashboard/createPost" method="post" id="post-form" enctype="multipart/form-data" class="login-form">
-                        <ul class="login-form">
-                            <li>
-                                <label for="title">{{label_title}}Title:</label>
-                            </li>
-                            <li>
-                                <input minlength="5" required type="text" name="title" id="title"/>
-                            </li>
-                            <li>
-                                <label for="content_txt">{{label_content}}Content:</label>
-                            </li>
-                            <li>
-                                <textarea minlength="5" required type="text" name="content_txt" id="content_txt" cols="30" rows="10"></textarea>
-                            </li>
-                            <li>
-                                <div class="button">
-                                    <button class="post-btn" type="submit"><a class="nav-link login" href="/create-post"> + New Post</a></button><br><br>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="button">
-                                    <button class="post-btn" type="submit"> + Edit Post</button><br><br>
-                                </div>
-                            </li>
-                        </ul>
-                    </form>
-                </div>
+            <div class="card-body">
+                <ul class="login-form">
+                   
+                    {{#each posts}}
+                        {{>post-info}}   
+                    {{/each}} 
+                    
+                    <li>
+                        <div class="button">
+                            <button class="post-btn"> + New Post</button><br><br>
+                            <a class="nav-link login" href="/create-post">Create Post</a>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="button">
+                            <button class="post-btn"> + Edit Post</button><br><br>
+                        </div>
+                    </li>
+
+                </ul>
+            </div>
         </div>
     </row>
 </container>
