--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,21 +1,5 @@
-{{#each posts}}
-    <article class="blog-post">
-  <container>
-    <row>
-      <div class="card">
-        <div class="card-header">
-          <div class="title"><h2>{{title}}</h2>
-            by {{user.username}} on {{format_date createdAt}}
-          </div>
-            <div class="card-body">
-              <div class="meta">
-                {{content_txt}} 
-                {{comments.length}} {{format_plural "comment" comments.length}}
-              </div>
-            </div>
-        </div>
-      </div>
-    </row>
-  </container>
-</article>
-{{/each}}
+<ul>
+  {{#each posts}}
+      {{>post-info}}
+  {{/each}} 
+</ul>
