--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -8,7 +8,7 @@
                 <ul class="login-form">
                    
                     {{#each posts}}
-                        {{>post-info}}   
+                        {{>post}}   
                     {{/each}} 
                     
                     <li>
