--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,8 @@
         <a class="nav-link login" href="/login">Login</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link logout" href="/logout">Logout</a>
+        {{!-- <a class="nav-link logout" href="/logout">Logout</a> --}}
+        <button id="logout">Log Out</button>
       </li>
     </ul>
         <h1 class="card-title" href="/"><span>The Tech Blog</span></h1>
