--- a/views/partials/post.handlebars
+++ b/views/partials/post.handlebars
@@ -1,6 +1,7 @@
-<li>
+<a href="/edit-post/{{id}}">
+  <li>
     <article class="blog-post">
-      <container>
+      <container><data postId="{{id}}"></data>
         <row>
           <div class="card">
             <div class="card-header">
@@ -9,8 +10,8 @@
               </div>
                 <div class="card-body">
                   <div class="meta">
-                    {{this.content_txt}} 
-                    {{comments.length}} {{format_plural "comment" comments.length}}
+                    {{content_txt}}<br><br>
+                    {{commentCount}} {{format_plural "comment" commentCount}}
                   </div>
                 </div>
             </div>
@@ -18,3 +19,4 @@
         </row>
       </container>
     </article>
+  </li>
