refactor edit and delete buttons for poster only

--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -1,4 +1,4 @@
-  <section class="comment priya-hero-form">
+<section class="CHANGE">
     <div class="meta">
       {{user.username}} on {{format_date createdAt}}
     </div>
@@ -6,8 +6,10 @@
       {{comment_text}}
     </div>
       <textarea minlength="3" style="display: none" name="comment_text_area_{{id}}" id="comment_text_area_{{id}}" cols="30" rows="10">{{comment_text}}</textarea>
+      {{#if showButtons}}
       <div class="hero-form">
           <button id="btnEdit_{{id}}" onclick="edit({{id}})">EDIT</button>
           <button id="btnDelete_{{id}}" onclick="del({{id}})">DELETE</button>
       </div>
+      {{/if}}
   </section>
