--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -20,7 +20,7 @@
   </form>
 </article>
 
-<form class="comment-form priya-hero-form">
+<form class="CHANGE">
   <div>
 
     <textarea required minlength="3" name="comment-body" id="comment_body"></textarea>
