--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,9 +1,9 @@
-* {
-  font-family: Helvetica, Arial, sans-serif;
-}
-:root {
+:root {  
   --primary-color: #231010;
   --secondary-color: #d9ead3;
+}
+* {
+  font-family: Helvetica, Arial, sans-serif;
 }
 body {
   color: var(--primary-color);
@@ -13,19 +13,6 @@ container {
   margin: 5px;
   padding: 5px,10px;
 }
-.card-header {
-  padding: 20px 20px;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  background: var(--primary-color);
-}
-.card-header a {
-  text-decoration: none;
-  color: var(--secondary-color);
-  padding: 10px 15px;
-  font-weight: lighter;
-  font-size: 1.25vw;
-}
 .nav-item {
   display: flex;
   flex-wrap: wrap;
@@ -33,19 +20,6 @@ container {
   align-items:left;
   list-style: none;
   display: inline-block;
-}
-.card-title {
-  color: var(--primary-color);
-  font-weight: bold;
-  margin: 5px;
-  padding: 5px,10px;
-  box-shadow: 10 10 5px rgba(119, 117, 117, 0.5);
-}
-.card-title span {
-  background: var(--secondary-color);
-  border-radius: 5px;
-  margin: 5px;
-  padding: 5px,10px;
 }
 .card {
   justify-content: center;
@@ -57,8 +31,33 @@ container {
 .card-header  {
   background-color: var(--primary-color);
   color: var(--secondary-color);
-  margin: 5px,0;
-  padding: 10px, 0;
+  border: solid;
+  border-color: var(--secondary-color);
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 20px 20px;
+}
+.card-header a {
+  text-decoration: none;
+  color: var(--secondary-color);
+  padding: 10px 15px;
+  font-size: 1.25rem;
+}
+.card-title {
+  color: var(--primary-color);
+  font-weight: bold;
+  margin: 5px;
+  padding: 5px,10px;
+}
+.card-title span {
+  background: var(--secondary-color);
+  border-radius: 5px;
+  margin: 5px;
+  padding: 5px,10px;
+}
+.card-body {
+  color: var(--primary-color);
+  background: var(--secondary-color);
 }
 .login-form {
   list-style: none;
@@ -87,16 +86,26 @@ container {
   border-color: var(--primary-color);
   width: 95%;
 }
-.container {
-  margin: 10px;
-  padding: 10px;
-}
 .button {
   text-align: center;
+
 }
 .post-btn {
   background: var(--primary-color);
   color: var(--secondary-color);
   text-align: center;
-  
+  font-size: 1.5rem;
+  border-radius: 5px;
+}
+.single-post {
+  text-decoration: none;
+}
+.meta {
+text-align: right;
+}
+a {
+  text-decoration: none;
+  color: var(--secondary-color);
+  padding: 10px 15px;
+  font-size: 1.5rem;
 }
