--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -6,23 +6,14 @@
             </div>
             <div class="card-body">
                 <ul class="login-form">
-                   
                     {{#each posts}}
                         {{>post}}   
                     {{/each}} 
-                    
-                    <li>
-                        <div class="button">
-                            <button class="post-btn"> + New Post</button><br><br>
-                            <a class="nav-link login" href="/create-post">Create Post</a>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="button">
-                            <button class="post-btn"> + Edit Post</button><br><br>
-                        </div>
-                    </li>
-
+                        <li>
+                            <div class="button">
+                                <button class="post-btn"><a href="/create-post"> + New Post</a></button><br><br>
+                            </div>
+                        </li>
                 </ul>
             </div>
         </div>
